# bluetooth-stdio

./: .gitignore  CMakeLists.txt  README.md  stdio_bt.c  stdio_bt.h
test/: CMakeLists.txt  bt_test.c
